something/ManagedVPC.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: "Cloudformation Stack which create: 
Managed VPC of Application
- VPC 
- 2 Public Subnets, 
- 3 Private Subnets
- Route Tables
- NACL
"

#==========================================================================
Parameters:

  AppName: 
    Description: Applications Name
    Type: String
 
  AZ1:
    Description: Availability Zone 1
    Type: AWS::EC2::AvailabilityZone::Name

  AZ2:
    Description: Availability Zone 2
    Type: AWS::EC2::AvailabilityZone::Name

  VPCCidr:
    Description: Virtual Network Cloud
    Type: String
    Default: 192.168.100.0/24

  PublicOneCidr:
    Description: VPC_CIDR
    Type: String
    Default: 192.168.100.32/28

  PublicTwoCidr:
    Description: VPC_CIDR
    Type: String
    Default: 192.168.100.48/28

  PrivateOneCidr:
    Description: VPC_CIDR
    Type: String
    Default: 192.168.100.0/28

  PrivateTwoCidr:
    Description: VPC_CIDR
    Type: String
    Default: 192.168.100.16/28
  
  PrivateThreeCidr:
    Description: VPC_CIDR
    Type: String
    Default: 192.168.100.64/28

#==========================================================================
Resources:

  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock: !Ref VPCCidr
      Tags:
          -
            Key: "Application"
            Value:
              Ref: "AWS::StackName"
          -
            Key: "Network"
            Value: "Public"
          -
            Key: "Name"
            Value: !Ref AppName


  PublicSubnetOne:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock: !Ref PublicOneCidr
      AvailabilityZone: !Ref AZ1
      MapPublicIpOnLaunch: "true"
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Public One"
        -
          Key: "Name"
          Value: !Sub ${AppName} Public One Subnet


  PublicSubnetTwo:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock: !Ref PublicTwoCidr
      AvailabilityZone: !Ref AZ2
      MapPublicIpOnLaunch: "true"
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Public Two"
        -
          Key: "Name"
          Value: !Sub ${AppName} Public Two Subnet


  PrivateSubnetOne:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock: !Ref PrivateOneCidr
      AvailabilityZone: !Ref AZ1
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Private One"
        -
          Key: "Name"
          Value: !Sub ${AppName} Private One Subnet


  PrivateSubnetTwo:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock: !Ref PrivateTwoCidr
      AvailabilityZone: !Ref AZ2
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Private Two"
        -
          Key: "Name"
          Value: !Sub ${AppName} Private Two Subnet

  PrivateSubnetThree:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock: !Ref PrivateThreeCidr
      AvailabilityZone: !Ref AZ2
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Private Three"
        -
          Key: "Name"
          Value: !Sub ${AppName} Private Three Subnet

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        -
          Key: Name
          Value: !Sub ${AppName} InternetGateway


  GatewayToInternet:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId:
        Ref: "VPC"
      InternetGatewayId:
        Ref: "InternetGateway"
      
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        -
          Key: Name
          Value: !Sub ${AppName} Public Route Table


  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: "GatewayToInternet"
    Properties:
      RouteTableId:
        Ref: "PublicRouteTable"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId:
        Ref: "InternetGateway"


  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        Ref: "PublicSubnetOne"
      RouteTableId:
        Ref: "PublicRouteTable"

  PublicSubnetRouteTableAssociationTwo:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        Ref: "PublicSubnetTwo"
      RouteTableId:
        Ref: "PublicRouteTable"


  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Sub ${AppName} Public NACL

  PrivateNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Private"
        -
          Key: "Name"
          Value: !Sub ${AppName} Private NACL

  InboundHTTPPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId:
        Ref: "PublicNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"


  OutboundPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId:
        Ref: "PublicNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"


  PublicSubnetNetworkAclAssociation:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PublicSubnetOne"
      NetworkAclId:
        Ref: "PublicNetworkAcl"

  PublicSubnetNetworkAclAssociationTwo:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PublicSubnetTwo"
      NetworkAclId:
        Ref: "PublicNetworkAcl"


  NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId:
        Fn::GetAtt:
          - "ElasticIP"
          - "AllocationId"
      SubnetId:
        Ref: "PublicSubnetOne"
      Tags:
        -
          Key: Name
          Value: !Sub ${AppName} NATGateway


  ElasticIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"
      

  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        -
          Key: Name
          Value: !Sub ${AppName} Private Route Table


  PrivateRouteToInternet:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId:
        Ref: "PrivateRouteTable"
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId:
        Ref: "NATGateway"


  PrivateSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnetOne"
      RouteTableId:
        Ref: "PrivateRouteTable"

  PrivateSubnetRouteTableAssociationTwo:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnetTwo"
      RouteTableId:
        Ref: "PrivateRouteTable"

  PrivateSubnetRouteTableAssociationThree:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnetThree"
      RouteTableId:
        Ref: "PrivateRouteTable"

  InboundHTTPPrivateNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId:
        Ref: "PrivateNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"


  OutboundPrivateNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId:
        Ref: "PrivateNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"


  PrivateSubnetNetworkAclAssociation:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnetOne"
      NetworkAclId:
        Ref: "PrivateNetworkAcl"

  PrivateSubnetNetworkAclAssociationTwo:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnetTwo"
      NetworkAclId:
        Ref: "PrivateNetworkAcl"
  
  PrivateSubnetNetworkAclAssociationThree:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnetThree"
      NetworkAclId:
        Ref: "PrivateNetworkAcl"

#==========================================================================
Outputs:
  VPC:
    Description: "VPCId of the newly created VPC"
    Value:
      Ref: "VPC"
    Export:
      Name: VPC

  PrivateOne:
    Description: "Private Subnet in AZ1"
    Value:
      Ref: "PrivateSubnetOne"
    Export:
      Name: PrivateOne

  PrivateTwo:
    Description: "Private Subnet in AZ2"
    Value:
      Ref: "PrivateSubnetTwo"
    Export:
      Name: PrivateTwo

  AZ1:
    Description: "AZ 1"
    Value:
      Ref: "AZ1"
    Export:
      Name: AZ1

  AZ2:
    Description: "AZ 2"
    Value:
      Ref: "AZ2"
    Export:
      Name: AZ2
  
  AppName:
    Description: "Applications Name"
    Value: !Ref AppName
    Export:
      Name: AppName
  
  VPCCidr:
    Description: VPC Cidr
    Value: !Ref VPCCidr
    Export:
      Name: VPCCidr
